--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
 title: Harnessing AI - a Pizza Ranch Breakout Session
-description: Some links for your edification
+description: >
+  talk to us
+  michael.hall at pizzaranch.com
+  parker.king at pizzaranch.com"
+
