--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 theme: jekyll-theme-minimal
 title: Harnessing AI - a Pizza Ranch Breakout Session
-description: >
-  talk to us
-  michael.hall at pizzaranch.com
-  parker.king at pizzaranch.com"
+description: "talk to us <br/> michael.hall at pizzaranch.com <br/> parker.king at pizzaranch.com"
 
